<resources>
    <string name="app_name">Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@browntabbyandco.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_title">Brown Tabby and Co</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="event">Event</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Type</string>
    <string name="event_note">Note</string>
    <string name="event_repeat">Repeat</string>
    <string name="validate">Validate</string>
    <string name="delete">Delete</string>
    <string name="enven_alarm">Alarm</string>

    <string-array name="alarms_array">
        <item>One month before</item>
        <item>One week before</item>
        <item>One day before</item>
        <item>One hour before</item>
    </string-array>

</resources>
